--- a/kubernetes/cluster_roles/network-policies/argocd/redis.yaml
+++ b/kubernetes/cluster_roles/network-policies/argocd/redis.yaml
@@ -9,14 +9,6 @@ spec:
   types:
     - Ingress # stateful so don't need duplicate egress rules
   ingress:
-    - action: Allow # exposing ArgoCD redis metrics endpoint
-      protocol: TCP
-      source: 
-        namespaceSelector: projectcalico.org/name == "prometheus"
-        selector: app.kubernetes.io/instance == "prometheus-operator"
-      destination:
-        ports: [9121]
-
     - action: Allow # exposing redis port for pods -> redis
       protocol: TCP
       source:
@@ -25,3 +17,12 @@ spec:
                   app.kubernetes.io/name == 'argocd-application-controller'"
       destination:
         ports: [6379]
+    - action: Allow # exposing ArgoCD redis metrics endpoint
+      protocol: TCP
+      source: 
+        namespaceSelector: kubernetes.io/metadata.name == "prometheus"
+        selector: "app.kubernetes.io/instance == 'prometheus-operator' || 
+                  app.kubernetes.io/instance == 'prometheus' || 
+                  managed-by == 'prometheus-operator'"
+      destination:
+        ports: [9121]
