--- a/kubernetes/cluster_roles/network-policies/prometheus/prometheus-operator.yaml
+++ b/kubernetes/cluster_roles/network-policies/prometheus/prometheus-operator.yaml
@@ -4,8 +4,10 @@ metadata:
   name: prometheus-operator-network-policy
   namespace: prometheus
 spec: 
-  order: 80
-  selector: app.kubernetes.io/instance == "prometheus-operator"
+  order: 75
+  selector: "app.kubernetes.io/instance == 'prometheus-operator' || 
+             app.kubernetes.io/instance == 'prometheus' || 
+             managed-by == 'prometheus-operator'"
   types:  
     - Egress
   egress:
@@ -13,21 +15,24 @@ spec:
       protocol: TCP
       destination:
         namespaceSelector: projectcalico.org/name == "argocd"
-        selector: app.kubernetes.io/name == "argocd-metrics"
+        selector: "app.kubernetes.io/name == 'argocd-metrics' ||
+                   app.kubernetes.io/name == 'argocd-application-controller'"
         ports: [8082]
 
     - action: Allow # Scraping ArgoCD Server metrics
       protocol: TCP
       destination:
-        namespaceSelector: projectcalico.org/name == "argocd"
-        selector: app.kubernetes.io/name == "argocd-server" 
+        namespaceSelector: kubernetes.io/metadata.name == "argocd"
+        selector: "app.kubernetes.io/name == 'argocd-server-metrics' ||
+                   app.kubernetes.io/name == 'argocd-server'"
         ports: [8083]
 
     - action: Allow # Scraping ArgoCD Repo Server metrics
       protocol: TCP
       destination:
         namespaceSelector: projectcalico.org/name == "argocd"
-        selector: app.kubernetes.io/name == "argocd-repo-server"
+        selector: "app.kubernetes.io/name == 'argocd-repo-server' ||
+                   app.kubernetes.io/name == 'argocd-repo-server-metrics'"
         ports: [8084]
     
     - action: Allow # exposing ArgoCD redis metrics endpoint
@@ -36,13 +41,6 @@ spec:
         namespaceSelector: projectcalico.org/name == "argocd"
         selector: app.kubernetes.io/name == "argocd-redis"
         ports: [9121]
-    
-    - action: Allow # exposing ArgoCD dex server metrics endpoint
-      protocol: TCP
-      destination:
-        namespaceSelector: projectcalico.org/name == "argocd"
-        selector: app.kubernetes.io/name == "argocd-dex-server"
-        ports: [5558]
 
     - action: Allow # exposing nginx ingress metrics endpoint
       protocol: TCP
