fixing manifest error

--- a/kubernetes/cyphria_applications_roles/frontend/application/deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: frontend
-    containers:
-      - name: cyphria-frontend
-        image: ghcr.io/vchen7629/cyphria-frontend:latest
+    spec:
+      containers:
+        - name: cyphria-frontend
+          image: ghcr.io/vchen7629/cyphria-frontend:latest
