--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
@@ -8,7 +8,8 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec: 
   rules:
-  - http:
+  - host: myapp.127.0.0.1.nip.io
+    http:
     - paths: /
       pathType: prefix
       backend:
