--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
@@ -15,6 +15,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: frontend-svc
+            name: frontend-service
             port:
               number: 80
