--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
@@ -3,10 +3,8 @@ kind: Ingress
 metadata:
   name: frontend-ingress
   namespace: frontend
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec: 
+  ingressClassName: nginx
   rules:
   - host: myapp.127.0.0.1.nip.io
     http:
