changing nip ip to match my external ip

--- a/kubernetes/ansible.cfg
+++ b/kubernetes/ansible.cfg
@@ -5,4 +5,4 @@ display_skipped_hosts = false
 host_key_checking = false
 interpreter_python = auto_silent
 inventory = ./inventory/hosts.yaml
-roles_path = ./cluster_roles:./cyphria_roles
+roles_path = ./cluster_roles:./cyphria_applications_roles
