--- a/kubernetes/cluster_roles/network-policies/tasks/namespaces.yaml
+++ b/kubernetes/cluster_roles/network-policies/tasks/namespaces.yaml
@@ -28,3 +28,13 @@
         kind: Namespace
         metadata:
           name: nginx
+
+- name: Create Frontend namespace
+  kubernetes.core.k8s:
+    state: present
+    kubeconfig: /etc/rancher/k3s/k3s.yaml
+    definition: 
+      - apiVersion: v1
+        kind: Namespace
+        metadata:
+          name: frontend
