--- a/kubernetes/cluster_roles/nginx/templates/argocd.yaml
+++ b/kubernetes/cluster_roles/nginx/templates/argocd.yaml
@@ -22,6 +22,13 @@ spec:
               targetPorts:
                 http: 3000
                 https: 3000
+          resources:
+            limits:
+              cpu: null
+              memory: 512Mi
+            requests:
+              cpu: 50Mi
+              memory: 512Mi
           metrics:
             enabled: true
             portName: metrics
