--- a/kubernetes/cluster_roles/network-policies/tasks/main.yaml
+++ b/kubernetes/cluster_roles/network-policies/tasks/main.yaml
@@ -66,7 +66,12 @@
         - name: Apply Cloudflare Tunnel Server Network Policy
           ansible.builtin.shell:
             cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/cloudflare-tunnel.yaml') }}"  
+            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/cloudflare-tunnel.yaml') }}"
+
+        - name: Apply External-DNS Network Policy
+          ansible.builtin.shell:
+            cmd: "calicoctl create -f -"
+            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/external-dns.yaml') }}"    
              
     
     - name: Apply default deny all Policy
