--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
@@ -3,10 +3,13 @@ kind: Ingress
 metadata:
   name: frontend-ingress
   namespace: frontend
+  annotations:
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    external-dns.alpha.kubernetes.io/hostname: cyphria.com
+    external-dns.alpha.kubernetes.io/target: 1ce6caf3-289c-495d-b07a-c36146105c36.cfargotunnel.com
 spec: 
-  ingressClassName: nginx
   rules:
-  - host: myapp.10.0.0.167.nip.io
+  - host: cyphria.com
     http:
       paths:
       - path: /
