added more network policies to allow cloudflare tunnel -> nginx

--- a/kubernetes/cluster_roles/network-policies/applications/cloudflare-tunnel.yaml
+++ b/kubernetes/cluster_roles/network-policies/applications/cloudflare-tunnel.yaml
@@ -42,3 +42,9 @@ spec:
         ports:
         - "32768:65535"
     
+    - action: Allow # allowing cloudflare tunnel -> nginx
+      protocol: TCP
+      destination:
+        namespaceSelector: projectcalico.org/name == "nginx"
+        ports: [80, 443]
+    
