--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: frontend
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-    external-dns.alpha.kubernetes.io/hostname: cyphria.com,*.cyphria.com
+    external-dns.alpha.kubernetes.io/hostname: "cyphria.com,*.cyphria.com"
     external-dns.alpha.kubernetes.io/target: 8198f6ea-23df-459f-92cc-8e271c5557aa.cfargotunnel.com
 spec: 
   ingressClassName: nginx
