moving all prometheus yaml files into one argocd deployment

--- a/kubernetes/cluster_roles/prometheus/tasks/reset.yaml
+++ b/kubernetes/cluster_roles/prometheus/tasks/reset.yaml
@@ -26,20 +26,12 @@
     - prometheus-operated
     - prometheus-operator
 
-- name: Uninstall prometheus crds in argocd
-  kubernetes.core.k8s:
-    api_version: argoproj.io/v1alpha1
-    state: absent
-    kind: Application
-    name: prometheus-operator-crds
-    namespace: argocd
-
 - name: Uninstall prometheus operator in argocd
   kubernetes.core.k8s:
     api_version: argoproj.io/v1alpha1
     state: absent
     kind: Application
-    name: prometheus-operator
+    name: prometheus
     namespace: argocd
 
 
