--- a/kubernetes/cluster_roles/nginx/tasks/reset.yaml
+++ b/kubernetes/cluster_roles/nginx/tasks/reset.yaml
@@ -5,7 +5,7 @@
     state: absent
     api_version: apps/v1
     kind: Deployment
-    name: nginx-ingress-loadbalancer-ingress-nginx-controller
+    name: nginx-ingress-nginx-controller
     namespace: nginx
 
 
@@ -17,15 +17,15 @@
     name: "{{ item }}"
     namespace: nginx
   loop:
-    - nginx-ingress-loadbalancer-ingress-nginx-controller
-    - nginx-ingress-loadbalancer-ingress-nginx-controller-metrics
-    - nginx-ingress-loadbalancer-ingress-nginx-controller-admission
+    - nginx-ingress-nginx-controller
+    - nginx-ingress-nginx-controller-metrics
+    - nginx-ingress-nginx-controller-admission
 
 - name: Uninstall nginx application in argocd
   kubernetes.core.k8s:
     api_version: argoproj.io/v1alpha1
     state: absent
     kind: Application
-    name: nginx-ingress-loadbalancer
+    name: nginx
     namespace: argocd
 
