--- a/kubernetes/cluster_roles/nginx/templates/argocd.yaml
+++ b/kubernetes/cluster_roles/nginx/templates/argocd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: nginx-ingress-loadbalancer
+  name: nginx
   namespace: argocd
 spec:
   project: default
@@ -24,10 +24,10 @@ spec:
                 https: 3000
           resources:
             limits:
-              cpu: null
+              cpu: 250m
               memory: 512Mi
             requests:
-              cpu: 50Mi
+              cpu: 150m
               memory: 512Mi
           metrics:
             enabled: true
