--- a/kubernetes/cluster_roles/prometheus/application/server.yaml
+++ b/kubernetes/cluster_roles/prometheus/application/server.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: Prometheus
 metadata:
-  name: prometheus
+  name: prometheus-server
   namespace: prometheus
 spec:
   replicas: 3
