--- a/kubernetes/cluster_roles/prometheus/tasks/main.yaml
+++ b/kubernetes/cluster_roles/prometheus/tasks/main.yaml
@@ -1,43 +1,5 @@
-- name: Configuring Prometheus
-  block:
-  - name: Apply Prometheus operator crds to ArgoCD
-    kubernetes.core.k8s:
-      state: present
-      definition: "{{ lookup('ansible.builtin.template', 'prometheus-operator-crds.yaml') | from_yaml }}"
-      kubeconfig: /etc/rancher/k3s/k3s.yaml
-
-  - name: Install Prometheus Operator via ArgoCD
-    kubernetes.core.k8s:
-      state: present
-      definition: "{{ lookup('ansible.builtin.template', 'prometheus-operator.yaml') | from_yaml }}"
-      kubeconfig: /etc/rancher/k3s/k3s.yaml
-
-  - name: Creating Cluster Role
-    kubernetes.core.k8s:
-      kubeconfig: /etc/rancher/k3s/k3s.yaml
-      state: present
-      definition: "{{ lookup('file', 'application/serviceAccount.yaml') | from_yaml_all }}"
-
-  - name: adding argocd scrape endpoints
-    block:
-    - name: Applying argocd scrape config
-      kubernetes.core.k8s:
-        state: present
-        definition: "{{ lookup('file', 'scrape-config-files/argocd.yaml') | from_yaml }}"
-        kubeconfig: /etc/rancher/k3s/k3s.yaml
-      register: result
-      retries: 4
-      delay: 2
-      until: result is not failed
-    
-    - name: Applying nginx scrape config
-      kubernetes.core.k8s:
-        state: present
-        definition: "{{ lookup('file', 'scrape-config-files/nginx.yaml') | from_yaml }}"
-        kubeconfig: /etc/rancher/k3s/k3s.yaml
-
-  - name: Starting Prometheus Server
-    kubernetes.core.k8s:
-      state: present
-      definition: "{{ lookup('ansible.builtin.template', 'prometheus-server.yaml') | from_yaml }}"
-      kubeconfig: /etc/rancher/k3s/k3s.yaml
+- name: Deploy Prometheus to ArgoCD
+  kubernetes.core.k8s:
+    state: present
+    definition: "{{ lookup('ansible.builtin.template', 'argocd-deployment.yaml') | from_yaml }}"
+    kubeconfig: /etc/rancher/k3s/k3s.yaml
