--- a/kubernetes/cluster_roles/prometheus/application/nginx-targets.yaml
+++ b/kubernetes/cluster_roles/prometheus/application/nginx-targets.yaml
@@ -8,7 +8,7 @@ metadata:
 spec: 
   selector:
     matchLabels:
-      app.kubernetes.io/instance: nginx-ingress-loadbalancer
+      app.kubernetes.io/instance: nginx
   namespaceSelector:
     matchName: 
       - nginx
