--- a/kubernetes/cluster_roles/prometheus/application/nginx-targets.yaml
+++ b/kubernetes/cluster_roles/prometheus/application/nginx-targets.yaml
@@ -10,7 +10,7 @@ spec:
     matchLabels:
       app.kubernetes.io/instance: nginx
   namespaceSelector:
-    matchName: 
+    matchNames: 
       - nginx
   endpoints:
     - port: metrics # nginx ingress metrics
