--- a/kubernetes/cluster_roles/network-policies/deployed-applications/prometheus-operator.yaml
+++ b/kubernetes/cluster_roles/network-policies/deployed-applications/prometheus-operator.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: prometheus-operator-network-policy
   namespace: prometheus
+  annotations:
+    argocd.argoproj.io/sync-wave: "0" 
 spec: 
   order: 75
   selector: "app.kubernetes.io/instance == 'prometheus-operator' || 
