--- a/kubernetes/cluster_roles/network-policies/argocd/repo-server.yaml
+++ b/kubernetes/cluster_roles/network-policies/argocd/repo-server.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: argocd-repo-server-network-policy
   namespace: argocd
+  annotations:
+      argocd.argoproj.io/sync-wave: "0" 
 spec:
   order: 80
   selector: "app.kubernetes.io/name == 'argocd-repo-server' ||
