--- a/kubernetes/cluster_roles/network-policies/argocd/server.yaml
+++ b/kubernetes/cluster_roles/network-policies/argocd/server.yaml
@@ -1,8 +1,10 @@
-apiVersion: projectcalico.org/v3
+apiVersion: crd.projectcalico.org/v1
 kind: NetworkPolicy
 metadata:
   name: argocd-server-network-policy
   namespace: argocd
+  annotations:
+      argocd.argoproj.io/sync-wave: "0" 
 spec:
   order: 80
   selector: "app.kubernetes.io/name == 'argocd-server' ||
