--- a/kubernetes/cluster_roles/network-policies/deployed-applications/frontend.yaml
+++ b/kubernetes/cluster_roles/network-policies/deployed-applications/frontend.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: frontend-network-policy
   namespace: frontend
+  annotations:
+    argocd.argoproj.io/sync-wave: "0" 
 spec:
   order: 80
   selector: app.kubernetes.io/name == 'frontend'
