--- a/kubernetes/cluster_roles/network-policies/general/deny-all.yaml
+++ b/kubernetes/cluster_roles/network-policies/general/deny-all.yaml
@@ -2,6 +2,8 @@ apiVersion: projectcalico.org/v3
 kind: GlobalNetworkPolicy
 metadata:
   name: default-deny-all
+  annotations:
+    argocd.argoproj.io/sync-wave: "0" 
 spec: 
   order: 100
   namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name not in {"kube-system", "calico-system", "calico-apiserver"}
