--- a/kubernetes/cluster_roles/network-policies/argocd/dex-server.yaml
+++ b/kubernetes/cluster_roles/network-policies/argocd/dex-server.yaml
@@ -2,7 +2,7 @@ apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
 metadata:
   name: argocd-dex-server-network-policy
-  namespace: tigera-operator
+  namespace: argocd
 spec:
   order: 80
   selector: app.kubernetes.io/name == "argocd-dex-server"
