--- a/kubernetes/cluster_roles/network-policies/argocd/redis.yaml
+++ b/kubernetes/cluster_roles/network-policies/argocd/redis.yaml
@@ -2,7 +2,7 @@ apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
 metadata:
   name: argocd-redis-network-policy
-  namespace: tigera-operator
+  namespace: argocd
 spec:
   order: 80
   selector: app.kubernetes.io/name == "argocd-redis"
@@ -21,8 +21,6 @@ spec:
       protocol: TCP
       source: 
         namespaceSelector: kubernetes.io/metadata.name == "prometheus"
-        selector: "app.kubernetes.io/instance == 'prometheus-operator' || 
-                  app.kubernetes.io/instance == 'prometheus' || 
-                  managed-by == 'prometheus-operator'"
+        selector: all()
       destination:
         ports: [9121]
