--- a/kubernetes/cluster_roles/network-policies/deployed-applications/prometheus-operator.yaml
+++ b/kubernetes/cluster_roles/network-policies/deployed-applications/prometheus-operator.yaml
@@ -3,57 +3,50 @@ kind: NetworkPolicy
 metadata:
   name: prometheus-operator-network-policy
   namespace: prometheus
-  annotations:
-    argocd.argoproj.io/sync-wave: "0" 
 spec: 
   order: 75
-  selector: "app.kubernetes.io/instance == 'prometheus-operator' || 
-             app.kubernetes.io/instance == 'prometheus' || 
-             managed-by == 'prometheus-operator'"
+  selector: all()
   types:  
     - Egress
   egress:
     - action: Allow # cloudflare tunnel metrics
       protocol: TCP
       destination: 
-        namespaceSelector: projectcalico.org/name == "cloudflare-tunnel"
+        namespaceSelector: kubernetes.io/metadata.name == "cloudflare-tunnel"
         selector: app == 'argocd-cloudflared-deployment'
         ports: [6940]
 
     - action: Allow # ArgoCD application controller metrics
       protocol: TCP
       destination:
-        namespaceSelector: projectcalico.org/name == "argocd"
-        selector: "app.kubernetes.io/name == 'argocd-metrics' ||
-                   app.kubernetes.io/name == 'argocd-application-controller'"
+        namespaceSelector: kubernetes.io/metadata.name == "argocd"
+        selector: app.kubernetes.io/name in {"argocd-metrics", "argocd-application-controller"}
         ports: [8082]
 
     - action: Allow # Scraping ArgoCD Server metrics
       protocol: TCP
       destination:
         namespaceSelector: kubernetes.io/metadata.name == "argocd"
-        selector: "app.kubernetes.io/name == 'argocd-server-metrics' ||
-                   app.kubernetes.io/name == 'argocd-server'"
+        selector: app.kubernetes.io/name in {"argocd-server", "argocd-server-metrics"}
         ports: [8083]
 
     - action: Allow # Scraping ArgoCD Repo Server metrics
       protocol: TCP
       destination:
-        namespaceSelector: projectcalico.org/name == "argocd"
-        selector: "app.kubernetes.io/name == 'argocd-repo-server' ||
-                   app.kubernetes.io/name == 'argocd-repo-server-metrics'"
+        namespaceSelector: kubernetes.io/metadata.name == "argocd"
+        selector: app.kubernetes.io/name in {"argocd-repo-server", "argocd-repo-server-metrics"}
         ports: [8084]
     
     - action: Allow # exposing ArgoCD redis metrics endpoint
       protocol: TCP
       destination:
-        namespaceSelector: projectcalico.org/name == "argocd"
+        namespaceSelector: kubernetes.io/metadata.name == "argocd"
         selector: app.kubernetes.io/name == "argocd-redis"
         ports: [9121]
 
     - action: Allow # exposing nginx ingress metrics endpoint
       protocol: TCP
       destination:
-        namespaceSelector: projectcalico.org/name == "nginx"
+        namespaceSelector: kubernetes.io/metadata.name == "nginx"
         selector: app.kubernetes.io/name == "ingress-nginx"
         ports: [10254]
