--- a/kubernetes/cluster_roles/network-policies/tasks/main.yaml
+++ b/kubernetes/cluster_roles/network-policies/tasks/main.yaml
@@ -6,73 +6,36 @@
 
 - name: Configure Network Policies
   block:    
-    - name: Configuring ArgoCD components Network Policies
-      block:
-        - name: Apply Argocd Server Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/argocd/server.yaml') }}"  
-        
-        - name: Apply Argocd Repo Server Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/argocd/repo-server.yaml') }}"
-        
-        - name: Apply Argocd Redis Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/argocd/redis.yaml') }}"
-        
-        - name: Apply Argocd Dex Server Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/argocd/dex-server.yaml') }}"
-        
-        - name: Apply ArgoCD Applicationset Controller Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/argocd/applicationset-controller.yaml') }}"
-        
-        - name: Apply ArgoCD Application Controller Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/argocd/application-controller.yaml') }}"
+    - name: Apply Argocd Server Network Policy
+      ansible.builtin.shell:
+        cmd: "calicoctl apply -f -"
+        stdin: "{{ lookup('file', item) }}"
+      with_items:
+        - "{{ playbook_dir }}/cluster_roles/network-policies/argocd/server.yaml" 
+        - "{{ playbook_dir }}/cluster_roles/network-policies/argocd/repo-server.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/argocd/redis.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/argocd/dex-server.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/argocd/applicationset-controller.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/argocd/application-controller.yaml"
+      register: result
+      retries: 3
+      delay: 1
+      until: result is not failed
   
-    - name: Configuring Applications Deployed By ArgoCD Network Policies
-      block: 
-        - name: Apply ingress nginx network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/nginx.yaml') }}"
-          register: result
-          retries: 3
-          delay: 1
-          until: result is not failed
-
-        - name: Apply prometheus operator network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/prometheus-operator.yaml') }}"
-          register: result
-          retries: 3
-          delay: 1
-          until: result is not failed
-
-        - name: Apply Argocd Server Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/frontend.yaml') }}" 
-
-        - name: Apply Cloudflare Tunnel Server Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/cloudflare-tunnel.yaml') }}"
-
-        - name: Apply External-DNS Network Policy
-          ansible.builtin.shell:
-            cmd: "calicoctl create -f -"
-            stdin: "{{ lookup('file', playbook_dir + '/cluster_roles/network-policies/applications/external-dns.yaml') }}"    
-             
+    - name: Apply ingress nginx network Policy
+      ansible.builtin.shell:
+        cmd: "calicoctl apply -f -"
+        stdin: "{{ lookup('file', item) }}"
+      with_items:
+        - "{{ playbook_dir }}/cluster_roles/network-policies/deployed-applications/nginx.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/deployed-applications/prometheus-operator.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/deployed-applications/frontend.yaml" 
+        - "{{ playbook_dir }}/cluster_roles/network-policies/deployed-applications/cloudflare-tunnel.yaml"
+        - "{{ playbook_dir }}/cluster_roles/network-policies/deployed-applications/external-dns.yaml"
+      register: result
+      retries: 3
+      delay: 1
+      until: result is not failed    
     
     - name: Apply default deny all Policy
       ansible.builtin.shell: 
