--- a/kubernetes/cluster_roles/network-policies/tasks/namespaces.yaml
+++ b/kubernetes/cluster_roles/network-policies/tasks/namespaces.yaml
@@ -1,5 +1,5 @@
 
-- name: Create ArgoCD namespace
+- name: Create namespaces
   kubernetes.core.k8s:
     state: present
     kubeconfig: /etc/rancher/k3s/k3s.yaml
@@ -7,34 +7,13 @@
       - apiVersion: v1
         kind: Namespace
         metadata:
-          name: argocd
-
-- name: Create Prometheus namespace
-  kubernetes.core.k8s:
-    state: present
-    kubeconfig: /etc/rancher/k3s/k3s.yaml
-    definition: 
-      - apiVersion: v1
-        kind: Namespace
-        metadata:
-          name: prometheus
-
-- name: Create nginx namespace
-  kubernetes.core.k8s:
-    state: present
-    kubeconfig: /etc/rancher/k3s/k3s.yaml
-    definition: 
-      - apiVersion: v1
-        kind: Namespace
-        metadata:
-          name: nginx
-
-- name: Create Frontend namespace
-  kubernetes.core.k8s:
-    state: present
-    kubeconfig: /etc/rancher/k3s/k3s.yaml
-    definition: 
-      - apiVersion: v1
-        kind: Namespace
-        metadata:
-          name: frontend
+          name: "{{ namespace }}"
+  loop:
+    - argocd
+    - prometheus
+    - nginx
+    - frontend
+    - cloudflare-tunnel
+    - external-dns
+  loop_control:
+    loop_var: namespace
