--- a/kubernetes/cluster_roles/network-policies/tasks/reset.yaml
+++ b/kubernetes/cluster_roles/network-policies/tasks/reset.yaml
@@ -30,7 +30,7 @@
       block:
         - name: Deleting Ingress Nginx Network Policy
           ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.nginx-ingress-network-policy -n nginx
+            cmd: calicoctl delete networkpolicy default.nginx -n nginx
 
         - name: Deleting Prometheus Network Policy
           ansible.builtin.shell:
@@ -46,7 +46,7 @@
         
         - name: Deleting cloudflare tunnel Network Policy
           ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.cloudflare-tunnel-network-policy -n cloudflare-tunnel
+            cmd: calicoctl delete networkpolicy default.cloudflare-tunnel -n cloudflare-tunnel
 
     - name: deleting argocd deny all
       ansible.builtin.shell:
