various changes for argocd deployed applications

--- a/kubernetes/cluster_roles/calico/defaults/main.yaml
+++ b/kubernetes/cluster_roles/calico/defaults/main.yaml
@@ -9,7 +9,7 @@ calico_vars:
         name: projectcalico
         org: calico
         url: https://docs.tigera.io
-      namespace: networking
+      namespace: tigera-operator
     calicoctl:
       version: calicoctl-linux-amd64
     felix_metrics:
