--- a/kubernetes/cyphria_applications_roles/cloudflare-tunnel/tasks/main.yaml
+++ b/kubernetes/cyphria_applications_roles/cloudflare-tunnel/tasks/main.yaml
@@ -34,7 +34,18 @@
       ansible.builtin.set_fact:
         tunnel_id:     "{{ tunnel_result.json.result.credentials_file.TunnelID }}"
         account_tag:   "{{ tunnel_result.json.result.credentials_file.AccountTag }}"
-        tunnel_secret: "{{ tunnel_result.json.result.credentials_file.TunnelSecret }}"    
+        tunnel_secret: "{{ tunnel_result.json.result.credentials_file.TunnelSecret }}"
+
+    - name: Save to file
+      ansible.builtin.copy:
+        dest: "{{ playbook_dir }}/cyphria_applications_roles/cloudflare-tunnel/credentials/temp.yaml"
+        content: |
+          tunnel_id: {{ tunnel_id }}
+          account_id: {{ cf_account_id }}
+          api_key: {{ api_token }}
+      delegate_to: localhost
+      become: false
+      run_once: true
 
     - name: Deploy to argocd
       kubernetes.core.k8s:
